[package]
name = "api-gateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.192", features = ["derive"] }
serde_yaml = "0.9.27"
tokio = { version = "1.34.0", features = ["full"] }
hyper = { version = "0.14.27", features = ["full"] }
reqwest = { version = "0.11.22", features = ["json"] }
simple_logger = "4.2.0"
log = "0.4.20"